fixed background img bug on splashpage, added wrap to text and icons, adjusted nav links css

--- a/react-app/src/components/NavBar.css
+++ b/react-app/src/components/NavBar.css
@@ -8,7 +8,8 @@
 
 .nav-bar {
     display: flex;
-    width: 60%;
+    width: 65%;
+    padding-left: 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -16,13 +17,17 @@
 .nav-bar-items a {
     text-decoration: none;
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .nav-bar-items {
     list-style: none;
+}
+
+.about-us:hover {
+    text-decoration: underline;
 }
 
 .nav-bar-btn {
@@ -57,8 +62,8 @@
 }
 
 .nav-logo {
-    height: 40px;
-    width: 150px;
+    height: 45px;
+    width: 160px;
 }
 
 .nav-logo:hover {
