--- a/react-app/src/components/SplashPage/index.css
+++ b/react-app/src/components/SplashPage/index.css
@@ -2,8 +2,10 @@
     display: flex;
     justify-content: center;
     background-image: url("https://theme.zdassets.com/theme_assets/678183/b7e9dce75f9edb23504e13b4699e208f204e5015.png");
-    background-size: contain;
+    background-size: cover;
+    background-position: center center;
     background-repeat: no-repeat;
+    background-color: rgb(64,78,237);
     height: 700px;
     width: 100vw;
 }
@@ -19,9 +21,10 @@
 
 .splash-title {
     color: white;
-    font-size: 56px;
-    font-family:"Poppins","Arial","Helvetica",sans-serif;
-    font-style: normal;
+    font-size: 70px;
+    /* font-family:'Courier New', Courier, monospace; */
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family:"Poppins","Arial","Helvetica",sans-serif; */
     font-weight: 800;
 }
 
@@ -35,7 +38,7 @@
 .get-started-btn {
     margin-top: 50px;
     height: 60px;
-    width: 300px;
+    width: 350px;
     border-radius: 2rem;
     border-width: 0px;
     border-color: rgb(64,78,237);
@@ -55,9 +58,11 @@
 
 .splash-page-middle {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    width: 1700px;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 }
 
 .splash-middle-title {
@@ -70,6 +75,12 @@
     font-size: 20px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: lighter;
+}
+
+.splash-middle-img {
+    height: 550px;
+    width: 720px;
+    padding-right: 40px;
 }
 
 .splash-middle-right {
