--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -37,11 +37,14 @@
 .login-form-title {
     padding-top: 20px;
     color: white;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
 }
 
 .login-form-text {
     color: rgb(184, 184, 184);
     font-size: 17px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .login-signup-errors {
@@ -94,11 +97,13 @@
     height: 42px;
     font-size: 20px;
     border-width: 0;
+    border-radius: 5px;
     border-color: black;
 }
 
 .login-form-register {
     display: flex;
+    align-items: center;
     margin-top: 20px;
 }
 
@@ -106,6 +111,8 @@
     padding-left: 10px;
     color: rgb(5,164,228);
     text-decoration: none;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
 }
 
 input:focus {
